# MIMF

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.api.bundle.json  demo.json  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
bundle-output/: events.jsonl  file_summary.json  hashes.txt  manifest.json  normalized.json  objects.jsonl  sources.json
demo.bundle.json/: events.jsonl  file_summary.json  hashes.txt  manifest.json  normalized.json  objects.jsonl  sources.json
docs/: README.md  SBOM.md  THREAT_MODEL.md
docs/cli/: COMMANDS_REFERENCE.md  HELP_mimf.txt  PLUGINS.txt
docs/examples/: WORKFLOWS.md
docs/getting-started/: INSTALL.md  QUICKSTART.md
docs/reference/: ARCHITECTURE.md  SECURITY_MODEL.md  TROUBLESHOOTING.md
mimf/: DEPLOYMENT.md  ETHICAL_USE.md  README.md  __init__.py  __main__.py
mimf/api/: __init__.py  auth.py  middleware.py  models.py  rate_limit.py  server.py
mimf/cli/: __init__.py  client_cmds.py  main.py
mimf/client/: __init__.py  http.py
mimf/forensic/: __init__.py  bundle.py  custody.py  diff.py  merkle.py  signing.py  timeline.py
mimf/tests/: test_api_server.py  test_boundary_rule.py  test_capabilities.py  test_capability_rule.py  test_default_mutation_executor.py  test_dry_run_executor.py  test_event_query.py  test_forensic_bundle.py  test_forensic_bundle_diff.py  test_forensic_bundle_signing.py  test_forensic_custody.py  test_forensic_timeline.py  test_forensic_transfer_receipts.py  test_inspection.py  test_mutation_execution_event.py  test_mutation_plan_and_executor.py  test_normalized_export_policy.py  test_normalizer_dispatcher.py  test_normalizer_fallback.py  test_pdf_normalization.py  test_plugins_generic_inspector.py  test_plugins_json_inspector.py  test_plugins_pdf_inspector.py  test_policy_context.py  test_policy_engine.py  test_policy_event.py  test_policy_models.py  test_policy_pack.py  test_policy_rules.py  test_replay_engine.py  test_rule_based_policy_engine.py  test_runtime_context.py  test_runtime_event.py  test_runtime_object.py  test_safe_mutation_pipeline.py  test_safe_mutation_pipeline_security_integration.py  test_sandbox_inspector.py  test_security_boundaries.py  test_sqlite_runtime_store.py  test_sqlite_store_datetime.py
mimf/utils/: json_safe.py
out_bundle/: events.jsonl  file_summary.json  hashes.txt  manifest.json  normalized.json  objects.jsonl  signature.json  signature.sig
out_bundle_full/: events.jsonl  file_summary.json  hashes.txt  manifest.json  normalized.json  objects.jsonl  sources.json
out_bundle_signed/: events.jsonl  file_summary.json  hashes.txt  manifest.json  normalized.json  objects.jsonl  signature.json  signature.sig
policy_packs/: default.yaml  forensic_internal.yaml  strict_export.yaml
scripts/: demo_run.sh  generate_sbom.sh
source/: pyvenv.cfg
tools/: remove_complexity_notes.py
(+55 files in other folders)
