[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mimf*"]
exclude = ["source*", "policy_packs*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
mimf = ["../policy_packs/*.yaml", "../policy_packs/*.yml"]




[project]
name = "mimf"
version = "0.2.0"
description = "Metadata Intelligence & Mutation Framework (MIMF)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MIMF" }]

dependencies = [
    "cryptography>=46.0.3",
    "defusedxml>=0.7.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
]


[project.scripts]
mimf = "mimf.cli.main:main"

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
    "httpx>=0.24",
    "pytest>=8,<9",
    "python-multipart>=0.0.22",
    "ruff>=0.14.14",
    "starlette>=0.27",
]


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["mimf/tests"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

