[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mimf*"]
exclude = ["source*", "policy_packs*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
mimf = ["../policy_packs/*.yaml", "../policy_packs/*.yml"]

[project]
name = "mimf"
version = "0.2.0"
description = "Metadata Intelligence & Mutation Framework (MIMF)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MIMF" }]

dependencies = [
  # SECURITY: CVE-2026-26007 is fixed in cryptography 46.0.5+
  "cryptography>=46.0.5",
  "defusedxml>=0.7.1",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Runtime API extras (only if you run the FastAPI server)
api = [
  "fastapi>=0.110",
  "starlette>=0.27",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
]

# Test deps (what CI should install to run pytest successfully)
test = [
  "pytest>=8,<9",
  "httpx>=0.24",
  "fastapi>=0.110",
  "starlette>=0.27",
  "python-multipart>=0.0.9",
]

# Developer conveniences (lint + tests)
dev = [
  "ruff>=0.4",
  "pytest>=8,<9",
  "httpx>=0.24",
  "fastapi>=0.110",
  "starlette>=0.27",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27",
]

[project.scripts]
mimf = "mimf.cli.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["mimf/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
